added the completly files

--- a/home-page.html
+++ b/home-page.html
@@ -196,6 +196,32 @@
       </div>
     </div>
   </section>
+  <section class="account-form" style="background-image: url(assets/img/Group\ 587.png);">
+    <div class="container">
+      <div class="d-flex items-center s-between">
+        <div class="col-2-3">
+          <div class="account-form-content">
+            <p class="account-description">Find your perfect match today</p>
+            <h3 class="account-title mtb-20-40">Meet the people with similar <strong>interests!</strong> </h3>
+            <p class="account-text">With million of members it won’t take long to find your soul mate. Join today for
+              free!</p>
+          </div>
+        </div>
+        <div class="col-1-3 no-margin">
+          <div class="form">
+            <h4 class="form-title">Create an Account</h4>
+            <p class="form-description">Be Part Of Our Next Community Meet.</p>
+            <input type="text" class="form-input" name="User name" placeholder="Username">
+            <input type="password" class="form-input" name="Password" placeholder="Password">
+            <input type="checkbox" class="form-checkbox"><label class="form-checkbox-title">Remember Me</label>
+            <button class="btn sign-up-btn secoundry-bgcolor">
+              Sign Up <img src="./assets/img/flat-icon/block-user.svg">
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="fations ptb-100">
     <div class="container">
       <div id="demo" class="tabs-main-wrapper text-center">
